# proj-prog

alex_1/: Makefile  main.c  monalisa.pgm  pnm  pnm.c  pnm.h
alex_1/test_image/: test.pbm  test.pgm  test.ppm
comprog/project_1/: .gitignore
comprog/project_1/code/: main-prefixe_suffixe.c  prefixe_suffixe.c  (+1 more)
project_1/: Makefile  _test2.pgm  pnm
project_1/image/: _test.pgm  monalisa.pgm
project_1/src/: main.c  pnm.c  pnm.h
project_1/test_image/: result.pbm  result.pgm  result.ppm  test.pbm  test.pgm  test.ppm
project_2/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  filtre  pnm_tests  res.ppm
project_2/docs/html/: graph_legend.html  index.html  md_README.html  pages.html
project_2/docs/html/search/: all_1.js  pages_0.js  searchdata.js
project_2/docs/latex/: md_README.tex  refman.aux  refman.fdb_latexmk  refman.fls  refman.idx  refman.ind  refman.tex  refman.toc
project_2/image/: antilope.ppm
project_2/lib/pnm/: Makefile  main.c  pnm.c  pnm.h
project_2/src/: filter.c  filter.h  main.c  pnm.h
project_2/test/: test.c
project_2/test/seatest/: seatest.c  seatest.h
project_2/test_image/: image.pbm  image.pgm  image.ppm  invalid_data.ppm  invalid_format.ppm  invalid_max_value.ppm  invalid_size.ppm  result.pbm  result.pgm  result.ppm
project_3/: Doxyfile  Makefile  tresor  ui.c
project_3/game/: game.h
project_3/src/: main.c
project_4/: .editorconfig  CMakeLists.txt  Game  Makefile  game
project_4/src/: main.c
project_4/src/game/: game.c  game.h
project_4/src/ui/: ui.c  ui.h
projects/project_1/: Makefile
projects/project_2/: .editorconfig
(+6 files in other folders)
